[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pokemon-cube-finder"
version = "0.1.0"
description = "Compare a Pokemon TCG collection against cube lists and rank completion."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116",
    "uvicorn[standard]>=0.35",
    "sqlalchemy>=2.0",
    "jinja2>=3.1",
    "python-multipart>=0.0.20",
    "pydantic-settings>=2.10",
    "httpx>=0.28",
    "pandas>=2.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4",
    "pytest-asyncio>=1.0",
    "ruff>=0.12",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py312"
